@@ -60,3 +60,8 @@ class DBAPIError(SQLAlchemyError):
     def __init__(self, message, orig):
         SQLAlchemyError.__init__(self, "(%s) (%s) %s"% (message, orig.__class__.__name__, str(orig)))
         self.orig = orig
+
+class MissingTypeError(SQLAlchemyError):
+    """no database type is available for the sa type"""
+    pass
+    
